# cursor-agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md
.cursor/: mcp.json
.github/workflows/: ci.yml
agent-runner/: DESIGN.md  Dockerfile  package-lock.json  package.json  tsconfig.json
agent-runner/scripts/: entrypoint.sh
agent-runner/src/: app.ts  config.ts  job-types.ts  run-logger.ts  run-policy.ts  server.ts  session-manager.ts  stale-auth.ts  success-verify.ts  worker-pool.ts
agent-runner/tests/: api.test.ts  execute-job.test.ts  run-logger.test.ts  run-policy.test.ts  (+4 more)
deploy/: SETUP.md
leantime-mcp/: .env.example  .gitignore  DESIGN.md  README.md  REUSE.toml  pyproject.toml
leantime-mcp/src/leantime_mcp/: __init__.py  client.py  server.py
leantime-mcp/tests/: test_client.py  test_files.py  test_server.py
leantime-plugin/: BridgeConfig.php  CommentLookup.php  DESIGN.md  DefaultScheduleGates.php  DelegatingRunnerClient.php  InProgressTicketProbe.php  LeantimeCommentLookup.php  LeantimeInProgressTicketProbe.php  LeantimeTicketLookup.php  Listener.php  NullCommentLookup.php  NullInProgressTicketProbe.php  NullTicketLookup.php  OpenAIRunnerClient.php  Plugin.php  ResilientRunnerClient.php  Router.php  RunnerClient.php  RunnerSessionNotFoundException.php  RunnerTransport.php  ScheduleCron.php  ScheduleGates.php  ScheduleTicker.php  SessionStore.php  TicketLookup.php  bridge.json.sample  composer.json  phpunit.xml  register.php
scripts/: bootstrap-config.sh  flush-retries.sh  install-plugin-k8s.sh  install-plugin.sh  m0-spike.sh
(+82 files in other folders)
