# SPDX-FileCopyrightText: 2025 Daniel Eder
#
# SPDX-License-Identifier: MIT

[project]
name = "leantime-mcp"
version = "0.3.0"
description = "Model Context Protocol server for Leantime project management API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "fastmcp>=0.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]
authors = [
    { name = "Daniel Eder" }
]

[project.scripts]
leantime-mcp = "leantime_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
